{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 214,
  "lineage": "f7265782-4c73-7d9b-3b1e-4764d36f1e05",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "tf-net-ext",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2022-01-17T00:16:45.570-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-net-prod-1-6bf14184/global/firewalls/tf-allow-internal-tf-net-ext",
            "log_config": [],
            "name": "tf-allow-internal-tf-net-ext",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-ext",
            "priority": 1000,
            "project": "tf-net-prod-1-6bf14184",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/firewalls/tf-allow-internal-tf-net-ext",
            "source_ranges": [
              "10.100.10.0/24",
              "10.100.11.0/24",
              "10.100.12.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_project.projects",
            "random_id.projects",
            "google_folder.folder"
          ]
        },
        {
          "index_key": "tf-net-int",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2022-01-17T00:16:56.963-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-net-prod-1-6bf14184/global/firewalls/tf-allow-internal-tf-net-int",
            "log_config": [],
            "name": "tf-allow-internal-tf-net-int",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-int",
            "priority": 1000,
            "project": "tf-net-prod-1-6bf14184",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/firewalls/tf-allow-internal-tf-net-int",
            "source_ranges": [
              "10.100.20.0/24",
              "10.100.21.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_folder.folder",
            "google_project.projects",
            "random_id.projects"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "tf-net-ext",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-17T03:45:23.637-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-net-prod-1-6bf14184/global/firewalls/tf-allow-ssh-tf-net-ext",
            "log_config": [],
            "name": "tf-allow-ssh-tf-net-ext",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-ext",
            "priority": 1000,
            "project": "tf-net-prod-1-6bf14184",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/firewalls/tf-allow-ssh-tf-net-ext",
            "source_ranges": [
              "10.100.10.0/24",
              "10.100.11.0/24",
              "10.100.12.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_project.projects",
            "random_id.projects",
            "google_folder.folder"
          ]
        },
        {
          "index_key": "tf-net-int",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-17T03:45:23.656-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-net-prod-1-6bf14184/global/firewalls/tf-allow-ssh-tf-net-int",
            "log_config": [],
            "name": "tf-allow-ssh-tf-net-int",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-int",
            "priority": 1000,
            "project": "tf-net-prod-1-6bf14184",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/firewalls/tf-allow-ssh-tf-net-int",
            "source_ranges": [
              "10.100.20.0/24",
              "10.100.21.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_id.projects",
            "google_folder.folder",
            "google_project.projects"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "networks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "tf-net-ext",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/tf-net-prod-1-6bf14184/global/networks/tf-net-ext",
            "mtu": 1460,
            "name": "tf-net-ext",
            "project": "tf-net-prod-1-6bf14184",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-ext"
          },
          "dependencies": [
            "google_folder.folder",
            "google_project.projects",
            "random_id.projects"
          ]
        },
        {
          "index_key": "tf-net-int",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/tf-net-prod-1-6bf14184/global/networks/tf-net-int",
            "mtu": 1460,
            "name": "tf-net-int",
            "project": "tf-net-prod-1-6bf14184",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-int"
          },
          "dependencies": [
            "google_folder.folder",
            "google_project.projects",
            "random_id.projects"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "tf-net-ext-sb1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-15T04:20:04.060-08:00",
            "gateway_address": "10.100.10.1",
            "id": "projects/tf-net-prod-1-6bf14184/regions/europe-central2/subnetworks/tf-net-ext-sb1",
            "ip_cidr_range": "10.100.10.0/24",
            "name": "tf-net-ext-sb1",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-ext",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-net-prod-1-6bf14184",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/regions/europe-central2/subnetworks/tf-net-ext-sb1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.networks",
            "google_folder.folder",
            "google_project.projects",
            "random_id.projects"
          ]
        },
        {
          "index_key": "tf-net-ext-sb2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-15T04:20:04.432-08:00",
            "gateway_address": "10.100.11.1",
            "id": "projects/tf-net-prod-1-6bf14184/regions/europe-central2/subnetworks/tf-net-ext-sb2",
            "ip_cidr_range": "10.100.11.0/24",
            "name": "tf-net-ext-sb2",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-ext",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-net-prod-1-6bf14184",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/regions/europe-central2/subnetworks/tf-net-ext-sb2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.networks",
            "google_folder.folder",
            "google_project.projects",
            "random_id.projects"
          ]
        },
        {
          "index_key": "tf-net-ext-sb3",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-17T00:20:25.088-08:00",
            "gateway_address": "10.100.12.1",
            "id": "projects/tf-net-prod-1-6bf14184/regions/europe-west2/subnetworks/tf-net-ext-sb3",
            "ip_cidr_range": "10.100.12.0/24",
            "name": "tf-net-ext-sb3",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-ext",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-net-prod-1-6bf14184",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/regions/europe-west2/subnetworks/tf-net-ext-sb3",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_folder.folder",
            "google_project.projects",
            "random_id.projects",
            "google_compute_network.networks"
          ]
        },
        {
          "index_key": "tf-net-int-sb1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-15T04:20:03.146-08:00",
            "gateway_address": "10.100.20.1",
            "id": "projects/tf-net-prod-1-6bf14184/regions/europe-central2/subnetworks/tf-net-int-sb1",
            "ip_cidr_range": "10.100.20.0/24",
            "name": "tf-net-int-sb1",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-int",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-net-prod-1-6bf14184",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/regions/europe-central2/subnetworks/tf-net-int-sb1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_project.projects",
            "random_id.projects",
            "google_compute_network.networks",
            "google_folder.folder"
          ]
        },
        {
          "index_key": "tf-net-int-sb2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-15T04:20:03.362-08:00",
            "gateway_address": "10.100.21.1",
            "id": "projects/tf-net-prod-1-6bf14184/regions/europe-west1/subnetworks/tf-net-int-sb2",
            "ip_cidr_range": "10.100.21.0/24",
            "name": "tf-net-int-sb2",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/global/networks/tf-net-int",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-net-prod-1-6bf14184",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-net-prod-1-6bf14184/regions/europe-west1/subnetworks/tf-net-int-sb2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_project.projects",
            "random_id.projects",
            "google_compute_network.networks",
            "google_folder.folder"
          ]
        }
      ]
    }
  ]
}